- Added backup folders + added image and enable that image URL to be used On the extension - Added image feature below super chat and improved the design of the superchat - Manage the checkbox as checked via local storage - Added a button to uncheck all the messages if required to uncheck all the messages.

--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,11 @@
       "js": ["content.js"],
       "run_at": "document_end"
     }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["images/1603780019212.jpeg"],
+      "matches": ["*://www.youtube.com/*"]
+    }
   ]
 }
